--- a/hr/app/views/welcome/index.html.erb
+++ b/hr/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>HR Resume Database</h1>
+<%= link_to 'Resumes', controller: 'resumes' %>
