Attempt 1 at  Work Experiences.

--- a/hr/app/views/resumes/show.html.erb
+++ b/hr/app/views/resumes/show.html.erb
@@ -39,6 +39,9 @@
 <h2>Add a Language</h2>
 <%= render 'languages/form' %>
 
+<h2>Add a Work Experience</h2>
+<%= render 'work_experiences/form' %>
+
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
