--- a/hr/app/views/work_experiences/_work_experience.html.erb
+++ b/hr/app/views/work_experiences/_work_experience.html.erb
@@ -1,6 +1,6 @@
 <div class="w3-container">
-  <h5 class="w3-opacity"><b><%= workexperience.role_and_website %></b></h5>
-  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><%= workexperience.start_to_finish %></h6>
-  <p><%= workexperience.description %></p>
+  <h5 class="w3-opacity"><b><%= work_experience.role_and_website %></b></h5>
+  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><%= work_experience.start_to_finish %></h6>
+  <p><%= work_experience.description %></p>
   <hr>
 </div>
